src/components/lancer/WeaponAttackSetup.scss
@import '../../fonts';

$number_speed: 0.25s;


.WeaponAttackSetup {
  display: flex;
  justify-content: space-between;
  // align-items: center;
  // flex-wrap: wrap;

  padding: 30px 0;
  border-top: 3px solid $parchment_dark;

  .roll-container {
    display: flex;
    flex-direction: column;
    margin-right: 16px;

    .label {
      font-weight: bold;
      margin: 0 4px;
    }

    .BigRollButton {
      justify-content: flex-start;
    }

    .grit {
      text-align: center;
      margin-bottom: 6px;
      font-size: 18px;
    }

    .accuracy {
      display: flex;
      align-items: center;
      justify-content: center;
      font-size: 18px;

      &.actually-difficulty {
        color: $rust;

        .asset.d6 {
          // turns black to $rust
          filter: invert(19%) sepia(35%) saturate(2526%) hue-rotate(342deg) brightness(89%) contrast(96%);
        }
      }

      &:hover {
        background-color: $parchment_dark;
      }

      .asset.d6 {
        width: 20px;
        height: 20px;
        display: inline-block;
        margin: 0 2px;
      }
    }
  }


  .column-container {
    display: flex;

    .column {
      display: flex;
      flex-direction: column;
      width: 50%;
      flex-grow: 0;
      flex-shrink: 0;
      min-height: 210px;

      &.difficulty {
        align-items: flex-end;
        margin-right: 14px;

        * { color: $rust; }

        .Sources button {
          text-align: right;
        }
      }

      &.accuracy {
        align-items: flex-start;
        margin-left: 14px;

        * { color: $soft_black; }

        .Sources button {
          text-align: left;
        }
      }

      .column-label {
        font-size: 24px;
      }

      .NumberLine {
        position: relative;
        display: flex;

        .number {
          display: flex;
          align-items: center;
          position: relative;
          font-size: 60px;
          text-align: center;

          padding: 0;
          margin: 0 6px;
          width: 50px;
          transition: margin $number_speed, width $number_speed;
          overflow: hidden;

          opacity: 0.20;

          &:hover {
            background-color: $parchment_dark;
          }

          &.hidden {
            margin: 0;
            width: 0;
            padding: 0;
          }

          &.current {
            width: 70px;
            // margin: 0 6px 0 0;
            opacity: 1.0;

            .sign {
              visibility: visible;
              width: 32px;
            }
          }

          .sign {
            display: inline-block;
            visibility: hidden;
            width: 0px;
            transition: width $number_speed;
            text-align: center;
          }

          .count {
            min-width: 35px;
            margin: auto;
          }


        }
      }

      .Sources {
        display: flex;
        flex-wrap: wrap;
        width: 100%;

        button {
          white-space: nowrap;
          font-weight: bold;
          letter-spacing: 1px;
          width: 50%;
          margin: 4px 0;

          &:hover {
            background-color: $parchment_dark;
          }

          &.current {
            background-color: $rust;
            color: white;

            &:hover {
              background-color: $rust_dark;
            }
          }
        }
      }
    }
  }
}

